--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,19 +1,22 @@
 
 <ion-content padding='true'>
-    <div class="center">
-      <img src="assets/images/logo.png" class="logo"/>
-    </div>
-  <form>
-    <ion-list>
-      <ion-item>
-        <ion-label position="stacked">Full name</ion-label>
-        <ion-input autocomplete="off" type="text" name="name" [(ngModel)]="postData.name"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="stacked">Mobile</ion-label>
-        <ion-input autocomplete="off" type="text" name="mobile" [(ngModel)]="postData.mobile"></ion-input>
-      </ion-item>
-    </ion-list>
-    <ion-button expand="block" share="round" color="primary" (click)="loginAction()">Next</ion-button>
-  </form>
+  <div class="center">
+    <img src="assets/images/logo.png" class="logo"/>
+  </div>
+<form>
+  <ion-list>
+    <ion-item>
+      <ion-label position="stacked">Registered mobile</ion-label>
+      <ion-input autocomplete="off" type="text" name="mobile" [(ngModel)]="postData.mobile"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Password</ion-label>
+      <ion-input autocomplete="off" type="text" name="password" [(ngModel)]="postData.password"></ion-input>
+    </ion-item>
+  </ion-list>
+  <ion-item lines='none'>
+    For new account? <a routerLink='/signup'>Sign up.</a>
+  </ion-item>
+  <ion-button expand="block" share="round" color="primary" (click)="loginAction()">Login</ion-button>
+</form>
 </ion-content>
