--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,15 +1,12 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom" color="primary">
+  <ion-tab-bar slot="bottom" color="tertiary">
     <ion-tab-button tab="feed">
-      <ion-icon name="bed"></ion-icon>
-      <ion-label>Beds</ion-label>
+      <ion-icon name="clipboard"></ion-icon>
+      <ion-label>Dashboard</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="messages">
-      <ion-icon name="leaf"></ion-icon>
-      <ion-label>O<sub>2</sub></ion-label>
-    </ion-tab-button>
+   
 
     <!-- <ion-tab-button tab="notifications">
       <ion-icon name="person-add"></ion-icon>
