--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="tertiary">
     <ion-title>Settings</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -16,11 +16,11 @@
     </ion-list-header>
 
     <ion-item (click)="callNow()">
-      <ion-icon name="log-out" color="primary" slot="start"></ion-icon>
+      <ion-icon name="log-out" color="tertiary" slot="start"></ion-icon>
       <ion-label>
-        <ion-text color="dark">Customer care</ion-text>
+        <ion-text color="dark">Help Line</ion-text>
       </ion-label>
-      <ion-icon name="headset" color="primary" item-end></ion-icon>
+      <ion-icon name="headset" color="tertiary" item-end></ion-icon>
     </ion-item>
 
     <!--  
