--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,7 +1,7 @@
 
 <ion-content padding='true'>
   <div class="center">
-    <img src="assets/images/logo.png" class="logo"/>
+    <img src="assets/images/logo.jpg" class="logo"/>
   </div>
 <form>
   <ion-list>
