--- a/src/app/pages/feed/feed.page.html
+++ b/src/app/pages/feed/feed.page.html
@@ -5,16 +5,17 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <h3 padding>Welcome {{this.authUser?.name}}</h3>
+<ion-content padding>
+  <h3>Welcome</h3>
+  <h3><b>{{this.authUser?.name}}</b></h3>
   <ion-row>
     <ion-col col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 >
       <ion-card>
         <ion-card-content>
           <h3>Total Beds</h3>
-          <h1>133</h1>
+          <h1>{{this.postData?.total_beds}}</h1>
           <h3>Available Beds</h3>
-          <h1>133</h1>
+          <h1>{{this.postData?.avail_beds}}</h1>
         </ion-card-content>
       </ion-card>
     </ion-col>
@@ -22,20 +23,21 @@
       <ion-card>
         <ion-card-content>
           <h3>Total Oxigen</h3>
-          <h1>455</h1>
+          <h1>{{this.postData?.total_o}}</h1>
           <h3>Available Oxigen</h3>
-          <h1>455</h1>
+          <h1>{{this.postData?.avail_o}}</h1>
         </ion-card-content>
       </ion-card>
     </ion-col>
 
   </ion-row>
+  <h3 style="text-align: center; font-weight:bold; padding:2px;" class="blink_me">LIVE</h3>
   <ion-row>
     <ion-col col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 >
       <ion-card>
         <ion-card-content>
           <h3 padding>Update Beds</h3>
-          <ion-input autocomplete="off" type="text" name="mobile" [(ngModel)]="postData.total_beds" style="border:2px solid purple;"></ion-input>
+          <ion-input autocomplete="off" type="text" name="mobile" [(ngModel)]="postData.avail_beds" style="border:2px solid purple;"></ion-input>
         </ion-card-content>
         <ion-button expand="block" share="round" color="tertiary" (click)=updateDetails()>Update
         </ion-button>
@@ -45,7 +47,7 @@
       <ion-card>
         <ion-card-content>
           <h3 padding>Update Oxigen</h3>
-          <ion-input autocomplete="off" type="text" name="mobile" [(ngModel)]="postData.total_o" style="border:2px solid purple;"></ion-input>
+          <ion-input autocomplete="off" type="text" name="mobile" [(ngModel)]="postData.avail_o" style="border:2px solid purple;"></ion-input>
         </ion-card-content>
         <ion-button expand="block" share="round" color="tertiary" (click)=updateDetails()>Update
         </ion-button>
