--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,16 +1,12 @@
-<ion-header>
-  <ion-toolbar color="tertiary">
-    <ion-title>Registration</ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content padding='true'>
   <div class="center">
-    <img src="assets/images/logo.png" class="smallLogo"/>
-    <h1>Create Account</h1>
+    <img src="assets/images/logo.jpg" class="smallLogo"/>
+    <h2>Create Account</h2>
   </div>
   <form>
-    <ion-list>
+    <ion-list style="margin-bottom:40px;">
         <ion-item>
             <ion-label position="stacked">Hospital name</ion-label>
             <ion-input autocomplete="off" name="name" type="text" [(ngModel)]="postData.name"></ion-input>
@@ -37,18 +33,21 @@
         <ion-input autocomplete="off" name="password" type="number" [(ngModel)]="postData.total_beds"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Total Oxigen</ion-label>
+        <ion-label position="stacked">Total Oxigen Capacity</ion-label>
         <ion-input autocomplete="off" name="password" type="number" [(ngModel)]="postData.total_o"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">Password</ion-label>
         <ion-input autocomplete="off" name="password" type="password" [(ngModel)]="postData.password"></ion-input>
       </ion-item>
-      <ion-button expand="block" share="round" color="success" (click)="signupAction()">Registration</ion-button>
-      <ion-item lines='none'>
-        Already have an account? <a routerLink='/login'>Sign in.</a>
-      </ion-item>
+        <ion-item lines='none'>
+      Already have an account? <a routerLink='/login'>Sign in.</a>
+
+    </ion-item>
+    <ion-button expand="block" share="round" color="success" (click)="signupAction()">Registration</ion-button>
+
     </ion-list>
-   
+ 
+
   </form>
 </ion-content>
