--- a/src/app/pages/category-list-modal/category-list-modal.page.html
+++ b/src/app/pages/category-list-modal/category-list-modal.page.html
@@ -7,6 +7,6 @@
 <ion-content>
 
   <ion-footer>
-    <ion-button expand="block" share="round" color="primary" (click)="signupAction()">Done</ion-button>
+    <ion-button expand="block" share="round" color="primary">Done</ion-button>
   </ion-footer>
 </ion-content>
