--- a/src/app/pages/location-modal/location-modal.page.html
+++ b/src/app/pages/location-modal/location-modal.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-searchbar placeholder="Search Location..." animated mode="ios" debounce="500" (ionChange)="pickLocation($event)"></ion-searchbar>
+    <ion-searchbar placeholder="Search Location..." animated mode="ios" debounce="500"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-<img src = "assets/images/pick.png" style="padding:100px;">
+  <img src="assets/images/pick.png" style="padding:100px;">
 </ion-content>
